--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -70,16 +70,14 @@
                             
                             {% if get_place.mod_news %}
                                 <h6>{% trans "News"%}</h6>
-                                {% if publication %}
-                                    <ul class="unstyled">
-                                        {% for news in publication %}
-                                            <li><a href="{% url 'profile_public' news.author %}">{{ news.author }}</a> {% trans "posted" %} <a href="{{ news.get_absolute_url }}">{{ news.post_title }}</a> {% trans "on" %} {{ news.pub_date|date:"d F Y" }}</li>
-                                        {% empty %} 
-                                            <li>{% trans "Nothing published yet." %}</li>
-                                        {% endfor %}
-                                    </ul>
-                                {% endif %}  
-                            {% endif %} 
+                                <ul class="unstyled">
+                                    {% for news in publication %}
+                                        <li><a href="{% url 'profile_public' news.author %}">{{ news.author }}</a> {% trans "posted" %} <a href="{{ news.get_absolute_url }}">{{ news.post_title }}</a> {% trans "on" %} {{ news.pub_date|date:"d F Y" }}</li>
+                                    {% empty %}
+                                        <li>{% trans "Nothing published yet." %}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
                             
                             {% if get_place.mod_proposals %}
                                 <h6>{% trans "Proposals" %}</h6>
@@ -111,7 +109,9 @@
                             <h4>{% trans "Next events" %}</h4>
                             <ul class="unstyled">
                                 {% for m in meeting %}
-                                    <li><p><a href="{{ m.get_absolute_url }}">{{ m.title }}</a></p></li>
+                                    <li><a href="{{ m.get_absolute_url }}">{{ m.title }}</a> {% trans "on" %} {{ m.meeting_date|date:"d F Y" }}</li>
+                                {% empty %}
+                                    <li>{% trans "No events registered." %}</li>
                                 {% endfor %}
                             </ul>
                         </div>
