Make project activity/community switchable by deployment_setting

--- a/views/project/index.html
+++ b/views/project/index.html
@@ -6,6 +6,6 @@
 </p>
 <h3>{{=T("Features Include")}}:</h3>
 <ul>
-<li>{{=A(T("Projects"), _href=URL(f="project"))}} - {{=T("Project Details including organizations, activities and beneficiaries")}}</li>
+<li>{{=A(T("Projects"), _href=URL(f="project"))}} - {{=T("Project Details")}}</li>
 </ul>
 </div>
