--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -600,8 +600,28 @@ table {
     width:100%;
     text-align: center;
     border-top: #fff 1px solid;
-    padding-top: 10px;
 }
+#socialmedia_share {
+	float:left;
+	margin-top:7px;
+	margin-left:20px;
+	style:block;
+}
+.socialmedia_element {
+	float:left;
+	margin-right:8px;
+}
+#poweredby {
+	float:right;
+	margin-right:20px;
+}
+#poweredby a{
+	color: #2A485D;
+	text-decoration:none;
+	
+}
+/* Twitter bugfix */
+#twttrHubFrame { left: -9999em; }
 a.help, a:link.help {
     color: #fff;
     text-decoration: none;
