changed deployment style of share buttons

--- a/views/footer.html
+++ b/views/footer.html
@@ -1,4 +1,4 @@
-{{if deployment_settings.frontpage.share_icons:}}
+{{if deployment_settings.ui.get("social_buttons"):}}
 		<div id="socialmedia_share"></div>
 {{pass}}
 <p id="poweredby">
