--- a/views/timeline.html
+++ b/views/timeline.html
@@ -34,12 +34,8 @@
 	{{pass}}
 </div>
 <script>
- <!-- Need to be available before response.s3.scripts -->
+ // Need to be available before response.s3.scripts
  var Timeline_ajax_url = '/{{=request.application}}/static/scripts/simile/ajax/simile-ajax-api.js';
  var Timeline_urlPrefix = '/{{=request.application}}/static/scripts/simile/timeline/';
- //var Timeline_ajax_url = 'http://api.simile-widgets.org/ajax/2.2.1/simile-ajax-api.js';
- //var Timeline_urlPrefix = 'http://api.simile-widgets.org/timeline/2.3.1/';
-{{if not session.s3.debug:}}
  var Timeline_parameters = 'bundle=true';
-{{pass}}
 </script>
