--- a/views/_search.html
+++ b/views/_search.html
@@ -1,7 +1,6 @@
 {{try:}}
  {{=H2(title)}}
-{{except:}}
-{{pass}}
+{{except:}}{{pass}}
 <div id='rheader'>
 {{try:}}
  {{=XML(rheader)}}
@@ -13,18 +12,16 @@
 <div id='map'></div>
 <div class='form-container'>
 {{try:}}
-    {{=form}}
-{{except:}}
-{{pass}}
+  {{=form}}
+{{except:}}{{pass}}
 </div>
 <div><br /></div>
 <div id='table-container'>
 {{try:}}
-    {{if items:}}
+  {{if items:}}
     {{=H3(subtitle)}}
-    {{pass}}
-{{except:}}
-{{pass}}
+  {{pass}}
+{{except:}}{{pass}}
 <div id='list_formats'>
 {{try:}}
 {{if isinstance(items, DIV):}}
@@ -32,26 +29,22 @@
 <a href='{{=r.url(method="", representation="xls", vars=session.s3.filter)}}' title='{{=T("Export in XLS format")}}'><img src='/{{=request.application}}/static/img/icon-xls.png'/></a>
 <a href='{{=r.url(method="", representation="rss", vars=session.s3.filter)}}' title='{{=T("Export in RSS format")}}'><img src='/{{=request.application}}/static/img/RSS_16.png'/></a>
 {{if "location_id" in r.target()[2] or "site_id" in r.target()[2]:}}
-    <a href='{{=r.url(method="", representation="kml", vars=session.s3.filter)}}' title='{{=T("Export in KML format")}}'><img src='/{{=request.application}}/static/img/kml_icon.png'/></a>
-    <a id='gis_datatables_map-btn' title='{{=T("Show on Map")}}'><img src='/{{=request.application}}/static/img/map_icon.png'/></a>
+  <a href='{{=r.url(method="", representation="kml", vars=session.s3.filter)}}' title='{{=T("Export in KML format")}}'><img src='/{{=request.application}}/static/img/kml_icon.png'/></a>
+  <a id='gis_datatables_map-btn' title='{{=T("Show on Map")}}'><img src='/{{=request.application}}/static/img/silk/map.png'/></a>{{pass}}
+{{if "pe_id" in r.target()[2] or "person_id" in r.target()[2]:}}
+  <!--<a id='msg_datatables-btn' title='{{=T("Send Message")}}'><img src='/{{=request.application}}/static/img/silk/email.png'/></a>-->{{pass}}
 {{pass}}
-{{pass}}
-{{except:}}
-{{pass}}
+{{except:}}{{pass}}
 </div>
 {{try:}}
-    {{=items}}
-{{except:}}
-{{pass}}
+  {{=items}}
+{{except:}}{{pass}}
 </div>
 {{try:}}
-    {{=add_btn}}
-{{except:}}
-{{pass}}
+  {{=add_btn}}
+{{except:}}{{pass}}
 </div>
 {{if session.s3.debug:}}
-<script src="/{{=request.application}}/static/scripts/S3/s3.search.js" type="text/javascript" charset="utf-8"></script>
-{{else:}}
-<script src="/{{=request.application}}/static/scripts/S3/s3.search.min.js" type="text/javascript" charset="utf-8"></script>
-{{pass}}
+<script src="/{{=request.application}}/static/scripts/S3/s3.search.js" type="text/javascript" charset="utf-8"></script>{{else:}}
+<script src="/{{=request.application}}/static/scripts/S3/s3.search.min.js" type="text/javascript" charset="utf-8"></script>{{pass}}
 {{include "dataTables.html"}}
