--- a/views/_report.html
+++ b/views/_report.html
@@ -53,7 +53,7 @@
     {{items = items}}
     <div id='chart-container' class='hide'>
         {{=A(T("Close"), _href="#", _id="hide-chart", _class="action-lnk")}}
-        <div id='chart' style='width:400px; height:300px;'></div>
+        <div id='chart' style='height:300px;'></div>
     </div>
     <div id='table-container'>
         <div id='chart-opts'>
