--- a/views/_report.html
+++ b/views/_report.html
@@ -29,10 +29,14 @@
         {{response.s3.actions=None}}
         <div id='chart-opts' style='padding-bottom:10px;'>
             {{if report_data.row_label:}}
-                <a href="#" id="pie_chart_rows"><img src="/{{=request.application}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>{{=report_data.row_label}}
+                <a href="#" id="pie_chart_rows"><img src="/{{=request.application}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>
+                <a href="#" id="vbar_chart_rows"><img src="/{{=request.application}}/static/img/report/vchart.png" style="vertical-align:middle;"/></a>
+                {{=report_data.row_label}}
             {{pass}}
             {{if report_data.col_label:}}
-                <a href="#" id="pie_chart_cols"><img src="/{{=request.application}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>{{=report_data.col_label}}
+                <a href="#" id="pie_chart_cols"><img src="/{{=request.application}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>
+                <a href="#" id="vbar_chart_cols"><img src="/{{=request.application}}/static/img/report/vchart.png" style="vertical-align:middle;"/></a>
+                {{=report_data.col_label}}
             {{pass}}
         </div>
         {{pass}}
@@ -66,9 +70,19 @@ var json_data = {cols:null, rows:null};
 {{if session.s3.debug:}}
 <script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jquery.jqplot.js"></script>
 <script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.pieRenderer.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.barRenderer.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.categoryAxisRenderer.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.pointLabels.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.canvasTextRenderer.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.canvasAxisTickRenderer.js"></script>
 <script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/s3.report.js"></script>
 {{else:}}
 <script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jquery.jqplot.min.js"></script>
 <script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.pieRenderer.min.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.barRenderer.min.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.categoryAxisRenderer.min.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.pointLabels.min.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.canvasTextRenderer.min.js"></script>
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/jqplot_plugins/jqplot.canvasAxisTickRenderer.min.js"></script>
 <script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/s3.report.js"></script>
 {{pass}}
