--- a/views/_report.html
+++ b/views/_report.html
@@ -28,6 +28,7 @@
         {{if report_data is not None:}}
         {{response.s3.actions=None}}
         <div id='chart-opts' style='padding-bottom:10px;'>
+            {{=report_data.layer_label}}
             {{if report_data.row_label:}}
                 <a href="#" id="pie_chart_rows"><img src="/{{=request.application}}/static/img/report/pchart.png" style="vertical-align:middle;"/></a>
                 <a href="#" id="vbar_chart_rows"><img src="/{{=request.application}}/static/img/report/vchart.png" style="vertical-align:middle;"/></a>
