--- a/views/_search.html
+++ b/views/_search.html
@@ -44,7 +44,10 @@
   {{=add_btn}}
 {{except:}}{{pass}}
 </div>
+{{try:}}{{=dashboard}}{{except:}}{{pass}}
 {{if session.s3.debug:}}
-<script src="/{{=request.application}}/static/scripts/S3/s3.search.js" type="text/javascript" charset="utf-8"></script>{{else:}}
-<script src="/{{=request.application}}/static/scripts/S3/s3.search.min.js" type="text/javascript" charset="utf-8"></script>{{pass}}
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/s3.search.js"></script>
+{{else:}}
+<script language="javascript" type="text/javascript" src="/{{=request.application}}/static/scripts/S3/s3.search.min.js"></script>
+{{pass}}
 {{include "dataTables.html"}}
