--- a/src/e_cidadania/apps/debate/templates/debate/debate_view.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_view.html
@@ -71,6 +71,7 @@
                                                         {% endif %}
                                                     </div>
                                                     <p class="note-text">{{ note.title }}</p>
+                                                    <span id="view-note" class="label hidden"><a href="#" onclick="viewNote(this)" data-controls-modal="view-current-note" data-backdrop="true" data-keyboard="true">{% trans "View" %}</a></span>
                                                     {% if note.author == request.user %}
                                                         <span id="edit-note" class="label hidden"><a href="#" onclick="editNote(this)" data-controls-modal="edit-current-note" data-backdrop="true" data-keyboard="true">{% trans "Edit" %}</a></span>
                                                     {% endif %}
@@ -114,6 +115,19 @@
                     </div>
                     <div class="modal-footer">
                         <a href="#" onclick="saveNote()" class="btn primary">{% trans "Save" %}</a>
+                    </div>
+                </div>
+
+                <div id="view-current-note" class="modal hide fade" style="display: none; ">
+                    <div class="modal-header">
+                        <a href="#" class="close">×</a>
+                        <h3>{% trans "View note" %}</h3>
+                    </div>
+                    <div class="modal-body">
+                        <h3 id="view-note-title"></h3>
+                        <p id="view-note-desc"></p>
+                    </div>
+                    <div class="modal-footer">
                     </div>
                 </div>
 
