--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -64,6 +64,10 @@ hr { /* This hr replaces the bootstrap one */
 #jsnotify {
     margin-top: 45px;
 }
+
+.content {
+    min-height: 500px;
+}
 /* END COMMON CUSTOMIZATIONS */
 
 /* MAIN INDEX */
