Added get_file_ext and get_file_size methods to documents

--- a/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_index.html
@@ -268,7 +268,7 @@
                         <div class="span11">
                             <ul class="unstyled">
                                 {% for doc in documents %}
-                                    <li><a href="{{ MEDIA_URL }}{{ doc.docfile.url }}">{{ doc.title }}</a></li>
+                                    <li><a href="{{ MEDIA_URL }}{{ doc.docfile.url }}">{{ doc.title }} ({{ doc.get_file_ext }}, {{ doc.get_file_size }})</a></li>
                                 {% empty %}
                                     <li>{% trans "No documents available." %}</li>
                                 {% endfor %}
