Fixes from Demo with Eero 2012-01-31 * Standardizing HRM action button label -> deployment_settings.get_ui_update_label() * Training Event Date fields use DateTime Widget * Fixing Footer in IFRC Style - correct syntax is: <div id='rheader'> {{try:}}  {{=XML(rheader)}}  </div> <!-- closes rheader div -->  <div id='component'> {{except:}} </div> <!-- closes rheader div  --> <div> <!-- opens div (to fill in for missing component div) --> {{pass}} <!-- main content with component div OR div --> </div> {{if response.s3.rfooter:}} <div id='rfooter'>  {{=XML(response.s3.rfooter)}} </div> {{pass}} (Should this all go into layout.html?) * Move rfooter OUT of component div * Fixed org_rheader for http://127.0.0.1:8000/eden/inv/incoming?viewing=org_office.9 (Incoming shipments) * Available Alternative Inventories -> Available Alternative Warehouses * Fix bug in Request Check * Fix bug in Send Commitments (in s3model.py)

--- a/static/styles/S3/sahana.css
+++ b/static/styles/S3/sahana.css
@@ -1195,9 +1195,7 @@ div#component {
 
 /* Resource Footer */
 div#rfooter {
-	margin-top: 35px;
-	border-top: 1px solid #006699;
-	padding-top: 10px;
+	padding: 15px 0;
 }
 
 /* Last Update Meta-data */
